--- a/index.html
+++ b/index.html
@@ -13,25 +13,29 @@
 
   <!-- Header -->
   <header id="main-header">
-    <div class="logo">
-      <a href="index.html"><img src="img/banner-santiago.jpg" alt="Castle Agency"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#hero">Inicio</a></li>
-        <li><a href="#nosotros">Sobre Nosotros</a></li>
-        <li class="has-submenu">
-          <a href="#equipo" >Equipo</a>
-          <ul>
-            <li><a href="portafolio-santiago.html">Santiago</a></li>
+  <div class="logo">
+    <a href="index.html"><img src="img/banner-santiago.jpg" alt="Castle Agency"></a>
+  </div>
+  <button id="menu-toggle" class="menu-toggle" aria-label="Toggle menu">
+  <span class="bar"></span>
+  <span class="bar"></span>
+  <span class="bar"></span>
+</button>
+  <nav>
+    <ul class="nav-list" id="nav-list">
+      <li><a href="#hero">Inicio</a></li>
+      <li><a href="#nosotros">Sobre Nosotros</a></li>
+      <li class="has-submenu">
+        <a href="#equipo">Equipo</a>
+        <ul class="submenu">
+          <li><a href="portafolio-santiago.html">Santiago</a></li>
         </ul>
-        </li>
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-      <button id="menu-toggle" class="menu-toggle">☰</button>
-    </nav>
-  </header>
+      </li>
+      <li><a href="#servicios">Servicios</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+    </ul>
+  </nav>
+</header>
 
   <!-- Inicio / Hero -->
   <section id="hero" class="hero">
