--- a/portafolio-santiago.html
+++ b/portafolio-santiago.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/santiago.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 </head>
 <body>
     <!-- Header -->
@@ -41,7 +40,7 @@
         <img src="img/banner-santiago.jpg" alt="Santiago Castillo">
         </div>
         <div class="bio-info">
-        <p><strong>Diseñador UX/UI</strong></p>
+        <h2>Diseñador UX/UI</h2>
         <p>
             Soy un diseñador apasionado por crear experiencias digitales intuitivas y memorables.
             Combino estética con funcionalidad para ofrecer soluciones centradas en el usuario.
