pagina base finalizada

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li><a href="#hero">Inicio</a></li>
       <li><a href="#nosotros">Sobre Nosotros</a></li>
       <li class="has-submenu">
-        <a href="#equipo">Equipo</a>
+        <a>Equipo</a>
         <ul class="submenu">
           <li><a href="portafolio-santiago.html">Santiago</a></li>
         </ul>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="imagen">
-      <img src="img/agencia.jpg" alt="Nuestro equipo">
+      <img src="img/banner-santiago.jpg" alt="Nuestro equipo" class="reveal">
     </div>
   </section>
 
@@ -72,7 +72,7 @@
       <div class="equipo-profesional">
         <a href="portafolio-santiago.html" class="profesional">
           <div class="foto-container">
-            <img src="img/santiago.jpg" alt="Santiago Castillo">
+            <img src="img/banner-santiago.jpg" alt="Santiago Castillo">
           </div>
           <div class="info-profesional">
             <h3>Santiago Castillo</h3>
@@ -88,24 +88,28 @@
     <h2 class="reveal-text">Servicios</h2>
     <div class="grid-servicios">
       <div class="servicio" data-aos="fade-up">
-        <img src="img/web.jpg" alt="Diseño Web">
-        <h3>Diseño Web</h3>
-        <p>Creación de sitios modernos, funcionales y adaptativos.</p>
+        <img src="img/banner-santiago.jpg" alt="Foto">
+        <div class="contenido">
+          <p>Captura de productos, eventos y retratos con estilo.</p>
+        </div>
       </div>
       <div class="servicio" data-aos="fade-up" data-aos-delay="100">
-        <img src="img/foto.jpg" alt="Fotografía">
-        <h3>Fotografía</h3>
-        <p>Captura de productos, eventos y retratos con estilo.</p>
+        <img src="img/banner-santiago.jpg" alt="Foto">
+        <div class="contenido">
+          <p>Captura de productos, eventos y retratos con estilo.</p>
+        </div>
       </div>
       <div class="servicio" data-aos="fade-up" data-aos-delay="200">
-        <img src="img/branding.jpg" alt="Branding">
-        <h3>Branding</h3>
-        <p>Desarrollo de identidades visuales que destacan.</p>
+        <img src="img/banner-santiago.jpg" alt="Foto">
+        <div class="contenido">
+          <p>Captura de productos, eventos y retratos con estilo.</p>
+        </div>
       </div>
       <div class="servicio" data-aos="fade-up" data-aos-delay="300">
-        <img src="img/social.jpg" alt="Marketing Digital">
-        <h3>Marketing</h3>
-        <p>Estrategias de contenido y redes sociales para crecer.</p>
+        <img src="img/banner-santiago.jpg" alt="Foto">
+        <div class="contenido">
+          <p>Captura de productos, eventos y retratos con estilo.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -150,7 +154,7 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="img/logo.svg" alt="Castle Agency" width="140" height="auto" />
+        <img src="img/banner-santiago.jpg" alt="Castle Agency" width="140" height="auto" />
       </div>
       <div class="footer-text">
         <p>&copy; 2025 Castle Agency. Todos los derechos reservados.</p>
