arregle el form flotante

--- a/portafolio-santiago.html
+++ b/portafolio-santiago.html
@@ -128,11 +128,11 @@
       <div class="popup-contenido">
         <button class="cerrar-popup" id="cerrarPopup" aria-label="Cerrar formulario">×</button>
         <h3>Conversemos</h3>
-        <form id="formFlotante">
+        <form id="formPopup"> <!-- CAMBIO AQUÍ -->
           <input type="text" name="nombre" placeholder="Nombre o Empresa" required>
           <input type="email" name="email" placeholder="Correo electrónico" required>
           <textarea name="mensaje" rows="4" placeholder="Mensaje (opcional)" required></textarea>
-          <div id="mensajeFlotante" class="mensaje-estado"></div>
+          <div id="mensajePopup" class="mensaje-estado"></div> <!-- CAMBIO AQUÍ -->
           <button type="submit">Enviar</button>
         </form>
       </div>
