--- a/portafolio-santiago.html
+++ b/portafolio-santiago.html
@@ -10,156 +10,147 @@
   <link rel="stylesheet" href="css/santiago.css"/>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.cdnfonts.com/css/glacial-indifference" rel="stylesheet">
 </head>
 <body>
    <!-- Header -->
-    <header id="main-header">
-      <div class="logo">
-        <a href="index.html"><img src="img/banner-santiago.jpg" alt="Castle Agency"></a>
+<header id="main-header">
+  <div class="logo">
+    <a href="index.html"><img src="img/logobh.png" alt="Castle Agency"></a>
+  </div>
+  <button id="menu-toggle" class="menu-toggle" aria-label="Toggle menu">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </button>
+  
+  <nav>
+    <ul class="nav-list" id="nav-list">
+      <a href="index.html#hero" data-i18n="inicio"><span style="margin-right: 0.5rem;">←</span>Regresar al Inicio</a>
+
+      <li><a href="#biografia" data-i18n="biografia">Biografía</a></li>
+      <li><a href="#skills" data-i18n="skills">Habilidades</a></li>
+      <li><a href="#trabajos" data-i18n="trabajos">Mi Trabajo</a></li>
+      <li><a href="#contacto" data-i18n="contacto">Contacto</a></li>
+    </ul>
+  </nav>
+
+
+</header>
+
+
+      <!-- Banner -->
+    <section id="banner" class="banner">
+      <div class="banner-content">
+        <h1>SANTIAGO CASTILLO</h1>
+        <p data-i18n="rolBanner">Diseñador UX/UI especializado en experiencias digitales únicas</p>
       </div>
-      <button id="menu-toggle" class="menu-toggle" aria-label="Toggle menu">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </button>
-      <nav>
-        <ul class="nav-list" id="nav-list">
-          <li><a href="index.html#hero">Inicio</a></li>
-          <li><a href="index.html#nosotros">Sobre Nosotros</a></li>
-          <li class="has-submenu">
-            <a>Equipo</a>
-            <ul class="submenu">
-              <li><a href="portafolio-santiago.html">Santiago</a></li>
-            </ul>
-          </li>
-          <li><a href="index.html#servicios">Servicios</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-      </nav>
-    </header>
-
-
-
-    <section class="banner">
-    <div class="banner-content">
-     <h1>Santiago Castillo</h1>
-     <p>Diseñador UX/UI especializado en experiencias digitales únicas</p>
-    </div>
     </section>
 
-    <!-- Biografia -->
-    <section class="bio">
-    <div class="bio-container">
+    <!-- Biografía -->
+    <section id="biografia"class="bio">
+      <div class="bio-container">
         <div class="bio-img">
-        <img src="img/banner-santiago.jpg" alt="Santiago Castillo">
+          <img src="img/santi.jpg" alt="Santiago Castillo" />
         </div>
         <div class="bio-info">
-        <h2>Diseñador UX/UI</h2>
-        <p>
+          <p data-i18n="descripcionBio">
             Soy un diseñador apasionado por crear experiencias digitales intuitivas y memorables.
             Combino estética con funcionalidad para ofrecer soluciones centradas en el usuario.
             He trabajado en proyectos para marcas emergentes y empresas consolidadas, siempre con una visión fresca y estratégica.
-        </p>
-        <div class="redes">
+          </p>
+          <div class="redes">
             <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
             <a href="#" target="_blank"><i class="fab fa-dribbble"></i></a>
+          </div>
+          <a href="docs/cv-santiago.pdf" class="btn-descargar" download data-i18n="descargarCV">Descargar CV</a>
         </div>
-        <a href="docs/cv-santiago.pdf" class="btn-descargar" download>Descargar CV</a>
-        </div>
-    </div>
+      </div>
     </section>
-
 
     <!-- Skills -->
-    <section class="skills">
-        <h2>Tecnologías y Herramientas</h2>
-        <p>
-            Selecciona la herramienta para ver proyectos relacionados
-        </p>
-        <ul class="herramientas">
-            <li data-tool="photoshop" data-label="Photoshop">Photoshop</li>
-            <li data-tool="illustrator" data-label="Illustrator">Illustrator</li>
-            <li data-tool="maya3d" data-label="Maya 3D">Maya 3D</li>
-            
-        </ul>
-        <div class="tool-details" id="toolDetails">
-            <!-- Los proyectos se cargan aquí dinámicamente -->
-        </div>
+    <section id="skills" class="skills">
+      <h2 data-i18n="tecnologias">HABILIDADES Y HERRRAMIENTAS</h2>
+      <p data-i18n="instruccionHerramientas">Selecciona la herramienta para ver proyectos relacionados</p>
+      <ul class="herramientas">
+        <li data-tool="photoshop" data-label="Photoshop">Photoshop</li>
+        <li data-tool="illustrator" data-label="Illustrator">Illustrator</li>
+        <li data-tool="maya3d" data-label="Maya 3D">Maya 3D</li>
+      </ul>
+      <div class="tool-details" id="toolDetails"></div>
     </section>
 
+    <!-- Visor de proyectos -->
     <div id="viewerOverlay" class="viewer-overlay"></div>
     <div id="viewerContainer" class="viewer"></div>
 
-    <!-- Trabajos / Proyectos -->
-    <section class="trabajos">
-        <h2>Mis Proyectos</h2>
-
-        <div id="todosProyectos" class="tool-proyectos grid-proyectos">
-        <!-- Los proyectos se cargan aquí dinámicamente -->
-       </div>
+    <!-- Proyectos -->
+    <section id="trabajos"class="trabajos">
+      <h2 data-i18n="misProyectos">MI TRABAJO</h2>
+      <div id="todosProyectos" class="tool-proyectos grid-proyectos"></div>
     </section>
 
 
 
     <!-- formulario contacto -->
-    <section id="contacto" class="contacto reveal">
-      <div class="contacto-container">
-        <div class="contacto-info">
-          <h2>Contáctanos</h2>
-          <p>¿Tienes un proyecto en mente o deseas más información? Estamos listos para ayudarte a crear algo increíble.</p>
-          <p><i class="fas fa-envelope"></i> contacto@castleagency.com</p>
-          <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-          <p><i class="fas fa-location-dot"></i> Bogotá, Colombia</p>
-        </div>
-
-        <form id="formFlotante">
-          <input type="text" name="nombre" placeholder="Nombre o Empresa" required>
-          <input type="email" name="email" placeholder="Correo electrónico" required>
-          <textarea name="mensaje" rows="4" placeholder="Mensaje (opcional)" required></textarea>
-          <div id="mensajeFlotante" class="mensaje-estado"></div>
-          <button type="submit">Enviar</button>
-        </form>
-      </div>
-    </section>
-
-    <!-- formulario popup -->
-    <div class="popup-contacto" id="popupFormulario">
-      <div class="popup-contenido">
-        <button class="cerrar-popup" id="cerrarPopup" aria-label="Cerrar formulario">×</button>
-        <h3>Conversemos</h3>
-        <form id="formPopup"> <!-- CAMBIO AQUÍ -->
-          <input type="text" name="nombre" placeholder="Nombre o Empresa" required>
-          <input type="email" name="email" placeholder="Correo electrónico" required>
-          <textarea name="mensaje" rows="4" placeholder="Mensaje (opcional)" required></textarea>
-          <div id="mensajePopup" class="mensaje-estado"></div> <!-- CAMBIO AQUÍ -->
-          <button type="submit">Enviar</button>
-        </form>
-      </div>
+<section id="contacto" class="contacto reveal">
+  <div class="contacto-container">
+    <div class="contacto-info">
+      <h2 data-i18n="contacto">CONTACTANOS</h2>
+      <p data-i18n="contactoDescripcion">¿Tienes un proyecto en mente o deseas más información? Estamos listos para ayudarte a crear algo increíble.</p>
+      <p><i class="fas fa-envelope"></i> contactovoktag@gmail.com</p>
+      <p><i class="fas fa-phone"></i> +57 3167970360</p>
+      <p><i class="fas fa-location-dot"></i> Bogotá, Colombia</p>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-logo">
-          <img src="img/banner-santiago.jpg" alt="Castle Agency" width="140" height="auto" />
-        </div>
-        <div class="footer-text">
-          <p>&copy; 2025 Castle Agency. Todos los derechos reservados.</p>
-          <p>Diseño y desarrollo por <strong>Casti Agency</strong></p>
-        </div>
-        <div class="footer-social">
-          <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://www.behance.net" target="_blank"><i class="fab fa-behance"></i></a>
-          <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-    </footer>
+    <form id="formFlotante">
+  <input type="text" name="nombre" data-i18n="nombre" data-i18n-placeholder="nombre" placeholder="Nombre o Empresa" required>
+  <input type="email" name="email" data-i18n="correo" data-i18n-placeholder="correo" placeholder="Correo electrónico" required>
+  <textarea name="mensaje" rows="4" data-i18n="mensaje" placeholder="Mensaje (opcional)" required></textarea>
+  <div id="mensajeFlotante" class="mensaje-estado"></div>
+  <button type="submit" data-i18n="enviar">Enviar</button>
+</form>
+  </div>
+</section>
 
-    <!-- Botón flotante -->
-    <div class="boton-flotante" id="botonContactoFlotante">
-    <i class="fas fa-handshake"></i> ¿Trabajamos juntos?
+<!-- formulario popup -->
+<div class="popup-contacto" id="popupFormulario">
+  <div class="popup-contenido">
+    <button class="cerrar-popup" id="cerrarPopup" aria-label="Cerrar formulario">×</button>
+    <h3 data-i18n="conversamos">CONVERSEMOS</h3>
+    <form id="formPopup">
+  <input type="text" name="nombre" data-i18n="nombre" data-i18n-placeholder="nombre" placeholder="Nombre o Empresa" required>
+  <input type="email" name="email" data-i18n="correo" data-i18n-placeholder="correo" placeholder="Correo electrónico" required>
+  <textarea name="mensaje" rows="4" data-i18n="mensaje" data-i18n-placeholder="mensaje" placeholder="Mensaje (opcional)" required></textarea>
+  <div id="mensajePopup" class="mensaje-estado"></div>
+  <button type="submit" data-i18n="enviar">Enviar</button>
+</form>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-logo">
+      <img src="img/logobv.png" alt="Castle Agency" width="140" height="auto" />
     </div>
+    <div class="footer-text">
+      <p data-i18n="footerTexto">&copy; 2025 VOKTAG. Todos los derechos reservados.</p>
+      <p data-i18n="footerCreditos">Diseño y desarrollo por <strong>Santiago Castillo</strong></p>
+    </div>
+    <div class="footer-social">
+      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://www.behance.net" target="_blank"><i class="fab fa-behance"></i></a>
+      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
+</footer>
+
+<!-- Botón flotante -->
+<div class="boton-flotante" id="botonContactoFlotante">
+  <i class="fas fa-handshake"></i> <span data-i18n="botonFlotante">¿Trabajamos juntos?</span>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="js/script.js"></script>
@@ -240,6 +231,7 @@
       }
     });
   </script>
+
 
 </body>
 </html>
