--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
 <!-- Inicio / Hero -->
 <section id="hero" class="hero">
-  <img src="videos/bghero.gif" alt="Fondo animado" class="gif-fondo" />
+  <video autoplay muted loop playsinline class="video-fondo">
+  <source src="videos/bghero.mp4" type="video/mp4">
+  Tu navegador no soporta video HTML5.
+</video>
+<div class="overlay-negro"></div>
   <div class="contenido">
     <h1 class="reveal-text">
       <img src="img/logoch.png" alt="VOKTAG Logo" class="logo-voktag" />
